# mattbot

./: .gitignore  DEPLOY_GUIDE.md  Decision Plan for Phase 1.txt  ENVIRONMENT_FILES_CREATED.md  ENVIRONMENT_SETUP.md  ENV_SETUP_GUIDE.md  MOBILE_APK_BUILD_GUIDE.md  MOBILE_APK_QUICK_START.md  MOBILE_APK_SETUP_COMPLETE.md  MOBILE_DEV_WORKFLOW.md  MOBILE_DOCUMENTATION_INDEX.md  MattBot Phase 1 High Level Plan.md  PHASE1_CHECKLIST.md  README.md  RUN_TESTS.md  check_el_conv.py  check_syntax.py  check_twilio.py  copy_alembic_pyc.py  copy_pyc_to_importable.py  disassemble_alembic.py  docker-compose.yml  extracted_mobile_code_FINAL.md  fix_all_models.py  fix_models.py  fix_twilio_webhooks.py  mobile-build.bat  mobile-build.ps1  reconstruct_models.py  recover_pyc.py  recover_source.py  test_call.py  test_call_simple.py
backend/: .dockerignore  .env.example  .env.prod  .env.staging  Dockerfile  _sync_all_agents.py  alembic.ini  entrypoint.sh  pyproject.toml  sync_agents.py
backend/alembic/: env.py
backend/alembic_recovered/: 002_add_apns_push_provider.py  003_settings_and_onboarding.py  004_billing_telephony_theme.py  005_twilio_number_lifecycle.py  006_billing_plan_configs.py  007_device_details_and_quiet_intervals.py  008_user_profile_fields.py  009_add_minutes_carried_over.py  010_call_intake_and_state_machine.py  011_call_ai_sessions_and_artifacts.py  012_agent_model_voice_prompt.py  013_call_artifact_notes.py  014_messaging_text_back.py  015_phase1_completion.py  016_vip_block_contact_metadata.py  017_hardening_fixes.py  018_push_token_partial_unique.py  019_add_calendar_booking.py  020_add_call_booking_link.py  021_add_greeting_instructions.py  022_change_default_timezone_to_utc.py  023_add_urgent_notification_settings.py  024_add_personal_phone.py  025_widen_voice_catalog_locale.py  026_add_caller_phone_hash_to_memory.py  027_add_pin_to_devices.py  028_contact_profiles_and_category_defaults.py  029_custom_contact_categories.py  196ccde938db_add_transcript_text_columns_to_call_.py
backend/app/: config.py  database.py  main.py
backend/app_recovered/: database.py  main.py
backend/data/: common_passwords.txt
(+711 files in other folders)
